# LK-Launcher

./: Cargo.toml  build.rs  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/desktopMain/kotlin/net/lakapple/lklauncher/: App.kt  main.kt
crates/lk_core/: Cargo.toml
crates/lk_core/src/: lib.rs
crates/lk_core/src/directories/: mod.rs  paths.rs
src/: constants.rs  globals.rs  logging.rs  main.rs
ui/: globals.slint  main.slint
ui/components/page-view/: index.slint  page-view-item.slint  page-view.slint
ui/components/selection-bar/: selection-bar-item.slint  selection-bar.slint
ui/components/selection-panel/: index.slint  selection-panel-item.slint  selection-panel.slint
ui/components/sidebar/: sidebar-item.slint  sidebar.slint
ui/pages/: accounts.slint  instances.slint  pages.slint  servers.slint  settings.slint
ui/style/: color-palette.slint
ui/style/color-palette/: default-themes.toml
ui/style/components/: button.slint  index.slint  text.slint
ui/style/components/selection-panel/: index.slint  selection-panel.slint  vertical-selection-panel-item.slint
