[package]
name = "lk-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
fern = "0.7.1"
log = "0.4.27"
slint = { version = "1.12.1", features = ["renderer-skia"] }

[build-dependencies]
slint-build = "1.12.1"
