[package]
name = "lk_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/lk_core"
]

[dependencies]
slint = { version = "1.12.1", features = ["renderer-skia"] }
lk_core = { path = "crates/lk_core" }

[build-dependencies]
slint-build = "1.12.1"

[features]
portable = ["lk_core/portable"]
